<resources>
    <string name="app_name">Hiring!</string>

    <string name="txtV_Login">Login</string>
    <string name="txtV_TitleApp">Hiring!</string>
    <string name="edit_txtV_Email">Email</string>
    <string name="edit_txtV_Password">Password</string>
    <string name="btn_Login">Join</string>
    <string name="tv_noAccount">Dont have an account?</string>
    <string name="tv_Register">Sign up here!</string>

    <string name="imageV_next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string> -->

    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_edite_profile">Edit Profile</string>
    <string name="title_details_jobs">Details Job</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Messages</string>
    <string name="button_offcanvas">Open the offcanvas</string>
    <string name="subtitle_home">What job are we going to find today?</string>
    <string name="tv_search">Search…</string>
    <string name="button_search">Search</string>
    <string name="title_jobcard">Job: %1$s</string>
    <string name="subtitle_jobcard">Contractor: %1$s</string>
    <string name="desc_jobImg">Job Image</string>
    <string name="desc_userImg">User image</string>
    <string name="tv_personName">User name</string>
    <string name="desc_envelope">Envelope Icon</string>
    <string name="tv_notification">%1$s has aswered you</string>

    <string name="tv_userName">User Name is Inserted Here</string>
    <string name="tv_userAge">%1$s years</string>
    <string name="tv_schoolarship">Top Schoolarship</string>
    <string name="tv_profession">Job or Profession</string>
    <string name="tv_aptitudes">Aptitudes</string>
    <string name="Lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="tv_userSchoolarship">Schoolarship</string>
    <string name="tv_userProfession">Profession</string>
    <string name="iv_graduationCap">Graduation cap image</string>
    <string name="iv_briefcase">Briefcase Image</string>
    <string name="btn_editProfile">Edit Profile</string>
    <string name="title_jobs">My Jobs</string>
    <string name="title_offerJob">Offer Job</string>
    <string name="tv_jobTitle">Job title</string>
    <string name="tv_jobDescription">Job description</string>
    <string name="tv_jobPayment">Job payment</string>
    <string name="et_jobTitle">Write the job title here</string>
    <string name="et_jobDescription">Description</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_offer">Offer</string>
    <string name="tv_moneyBalance" translatable="false">$MXN</string>
    <string name="btn_uploadImage">Upload image</string>
    <string name="btn_seeApps">See applications</string>
    <string name="btn_editJob">Edit job</string>
    <string name="tv_employer">Employer</string>
    <string name="btn_apply">Apply</string>
    <string name="ti_myJobs">My jobs</string>
    <string name="ti_myApps">My applications</string>
    <string name="tv_status">Status: %1$s</string>
    <string name="btn_refuse">Refuse</string>
    <string name="btn_hire">Hire</string>
    <string name="title_applications">Applications</string>
    <string-array name="Escolaridad">
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Preparatoria técnica</item>
        <item>Bachillerato</item>
        <item>Facultad</item>
    </string-array>
    <string name="btn_save">Save</string>
    <string name="title_hired">Hired</string>
    <string name="btn_erase">Erase</string>
    <string name="tab_myjobs">My jobs</string>
    <string name="tab_myapplications">My applications</string>
    <string name="tab_pending">Pending</string>
    <string name="tab_hired">Hired</string>
    <string name="tv_fromDate">From date:</string>
    <string name="tv_toDate">To date:</string>
    <string name="tv_minPayment">Min. payment:</string>
    <string name="tv_maxPayment">Max. payment:</string>
    <string name="btn_changePassword">Change password</string>
    <string name="tv_newPassword">New password</string>
    <string name="title_change_password">Change Password</string>
    <string name="string_create">Create</string>
    <string name="string_edit">Edit</string>
    <string name="mi_logout">Log out</string>
    <string name="btn_erase_job">Erase job</string>
    <string name="btn_close_job">Close job</string>
    <string-array name="queries">
        <item>Highest payment</item>
        <item>Lowest payment</item>
        <item>Recent date</item>
        <item>Oldest date</item>
    </string-array>
    <string name="tv_age">%1$s years</string>
    <string name="tv_notification_applied">%1$s has applied to your job</string>
    <string name="btn_draft">Draft</string>
</resources>