<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_offerJob"
        android:name="com.psm.hiring.ui.offerjob.OfferJobFragment"
        android:label="@string/title_offerJob"
        tools:layout="@layout/fragment_offer_job" />
    <fragment
        android:id="@+id/navigation_jobs"
        android:name="com.psm.hiring.ui.jobs.JobsFragment"
        android:label="@string/title_jobs"
        tools:layout="@layout/fragment_jobs" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.psm.hiring.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.psm.hiring.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.psm.hiring.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.psm.hiring.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_applications"
        android:name="com.psm.hiring.ui.applications.ApplicationsFragment"
        android:label="@string/title_applications"
        tools:layout="@layout/fragment_applications" />

    <fragment
        android:id="@+id/navigation_edit_profile_1of2"
        android:name="com.psm.hiring.ui.profile.Edit1of2Fragment"
        android:label="@string/title_edite_profile"
        tools:layout="@layout/fragment_1of2_edit_profile" />

    <fragment
        android:id="@+id/navigation_edit_profile_2of2"
        android:name="com.psm.hiring.ui.profile.Edit2of2Fragment"
        android:label="@string/title_edite_profile"
        tools:layout="@layout/fragment_2of2_edit_profile" />

    <fragment
        android:id="@+id/navigation_details_job"
        android:name="com.psm.hiring.ui.visualizejob.visualizeJobFragment"
        android:label="@string/title_details_jobs"
        tools:layout="@layout/fragment_visualize_job" />

    <fragment
        android:id="@+id/navigation_hired"
        android:name="com.psm.hiring.ui.hired.HiredFragment"
        android:label="@string/title_hired"
        tools:layout="@layout/fragment_hired" />


    <fragment
        android:id="@+id/navigation_general_applications"
        android:name="com.psm.hiring.ui.generalapplication.GeneralApplicationFragment"
        android:label="@string/title_applications"
        tools:layout="@layout/fragment_general_applications" />

    <fragment
        android:id="@+id/navigation_advanced_search"
        android:name="com.psm.hiring.ui.advancedsearch.AdvancedSearchFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_advanced_search" />

    <fragment
        android:id="@+id/navigation_change_password"
        android:name="com.psm.hiring.ui.changepassword.ChangePasswordFragment"
        android:label="@string/title_change_password"
        tools:layout="@layout/fragment_change_password" />

</navigation>