<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/navigation_jobs"
            android:icon="@drawable/ic_business_24"
            android:title="@string/title_jobs" />
        <item
            android:id="@+id/navigation_offerJob"
            android:icon="@drawable/ic_request_quote_24"
            android:title="@string/title_offerJob" />
        <item
            android:id="@+id/navigation_logOut"
            android:icon="@drawable/ic_logout_24"
            android:title="@string/mi_logout" />
    </group>
</menu>