<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_editPassword"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/btn_changePassword"
                android:textColor="#EAEAEA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_curriculum" />

            <Button
                android:id="@+id/btn_editProfile"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/btn_editProfile"
                android:textColor="#EAEAEA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_curriculum"
                tools:ignore="TextContrastCheck" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/desc_userImg"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_foreground" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_userName"
                android:textAlignment="center"
                android:textAppearance="@style/font_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/tv_userAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_userAge"
                android:textAppearance="@style/font_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />

            <LinearLayout
                android:id="@+id/ll_schoolarship"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_userAge">

                <TextView
                    android:id="@+id/tv_schoolarship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/blue_200"
                    android:elevation="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/tv_schoolarship"
                    android:textAlignment="center"
                    android:textAppearance="@style/font_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_graduationCap"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/iv_graduationCap"
                        android:src="@drawable/ic_school_24"
                        android:theme="@style/button_images" />

                    <TextView
                        android:id="@+id/tv_userSchoolarship"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="2"
                        android:text="@string/tv_userSchoolarship"
                        android:textAppearance="@style/font_text" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_profession"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_schoolarship">

                <TextView
                    android:id="@+id/tv_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/blue_200"
                    android:elevation="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/tv_profession"
                    android:textAlignment="center"
                    android:textAppearance="@style/font_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_briefcase"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/iv_briefcase"
                        android:src="@drawable/ic_work_24"
                        android:theme="@style/button_images" />

                    <TextView
                        android:id="@+id/tv_userProfession"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="2"
                        android:text="@string/tv_userProfession"
                        android:textAppearance="@style/font_text" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_aptitudes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@color/blue_200"
                android:elevation="5dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/tv_aptitudes"
                android:textAlignment="center"
                android:textAppearance="@style/font_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_profession" />

            <TextView
                android:id="@+id/tv_curriculum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/Lorem_ipsum"
                android:textAlignment="viewStart"
                android:textAppearance="@style/font_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_aptitudes" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>