<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B83E7">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="128dp"
        android:fontFamily="monospace"
        android:text="@string/txtV_TitleApp"
        android:textColor="#EAEAEA"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/nav_avatar_image"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="45dp"
        android:background="#00FFFFFF"
        android:translationZ="-1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_work_24"
        app:tint="#155FA6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/edit_txtV_Email"
        android:textColor="#EAEAEA"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/login_editTxt_email"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/login_editTxt_email"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="#EAEAEA"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#EAEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="@string/edit_txtV_Email" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/edit_txtV_Password"
        android:textColor="#EAEAEA"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/login_editTxt_password"
        app:layout_constraintTop_toBottomOf="@+id/login_editTxt_email" />

    <EditText
        android:id="@+id/login_editTxt_password"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="#EAEAEA"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#EAEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="@string/edit_txtV_Password" />

    <Button
        android:id="@+id/login_btn_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#009DCF"
        android:text="@string/btn_Login"
        android:textColor="#EAEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_editTxt_password" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_noAccount"
        android:textColor="#EAEAEA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_entrar" />

    <TextView
        android:id="@+id/login_txtV_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Register"
        android:textColor="#9BDEF3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>