<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changepassword.ChangePasswordFragment" >

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/title_change_password"
        android:textAppearance="@style/font_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout5"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_wired_white_background_card"
        android:paddingStart="30dp"
        android:paddingTop="80dp"
        android:paddingEnd="30dp"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_newPassword"
            android:textColor="#EAEAEA"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_change_password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_border"
            android:backgroundTint="#EAEAEA"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#EAEAEA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btn_saveDraft"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_change_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>